# soren-agent

./: README.md  main.py  pyproject.toml
.soren/: config.toml
.soren/tools/: test_tool.py
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py  responses.py
config/: config.py  loader.py
contexts/: compaction.py  loop_detector.py  manager.py
prompts/: system.py
scripts/: test_tool.py
tools/: base.py  discovery.py  registry.py  subagents.py
tools/builtin/: __init__.py  list_dir.py
tools/mcp/: mcp_manager.py
ui/: tui.py
utils/: text.py
